--- a/package.json
+++ b/package.json
@@ -35,65 +35,10 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "10.2.5",
-    "@angular/cdk": "10.2.5",
-    "@angular/common": "10.2.5",
-    "@angular/compiler": "10.2.5",
-    "@angular/core": "10.2.5",
-    "@angular/forms": "10.2.5",
-    "@angular/localize": "10.2.5",
-    "@angular/platform-browser": "10.2.5",
-    "@angular/platform-browser-dynamic": "10.2.5",
-    "@angular/router": "10.2.5",
-    "@ng-bootstrap/ng-bootstrap": "7.0.0",
-    "@ng-select/ng-select": "5.1.0",
-    "@ngrx/effects": "10.1.2",
-    "@ngrx/router-store": "10.1.2",
-    "@ngrx/store": "10.1.2",
-    "@ngrx/store-devtools": "10.1.2",
-    "@ngx-translate/core": "13.0.0",
-    "@ngx-translate/http-loader": "6.0.0",
-    "ag-grid-angular": "24.1.0",
-    "ag-grid-community": "24.1.0",
-    "bootstrap": "4.6.0",
-    "crypto-js": "4.0.0",
-    "ngx-toastr": "13.2.1",
-    "rxjs": "6.6.7",
-    "tslib": "2.1.0",
-    "zone.js": "0.11.4"
+    "@angular/common": "10.2.5"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.1002.1",
-    "@angular-eslint/builder": "1.2.0",
-    "@angular-eslint/eslint-plugin": "1.2.0",
-    "@angular-eslint/eslint-plugin-template": "1.2.0",
-    "@angular-eslint/schematics": "1.2.0",
-    "@angular-eslint/template-parser": "1.2.0",
     "@angular/cli": "10.2.3",
-    "@angular/compiler-cli": "10.2.5",
-    "@ngrx/schematics": "10.1.2",
-    "@types/jest": "24.9.1",
     "@typescript-eslint/eslint-plugin": "4.18.0",
-    "@typescript-eslint/parser": "4.18.0",
-    "eslint": "7.22.0",
-    "eslint-config-airbnb-typescript": "12.3.1",
-    "eslint-plugin-cypress": "2.11.2",
-    "eslint-plugin-header": "3.1.1",
-    "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-jest": "24.3.6",
-    "eslint-plugin-promise": "4.3.1",
-    "eslint-plugin-rxjs": "3.1.3",
-    "eslint-plugin-unicorn": "28.0.2",
-    "https-proxy-agent": "2.2.4",
-    "jest": "24.9.0",
-    "jest-marbles": "2.5.1",
-    "jest-preset-angular": "7.1.1",
-    "jspdf": "2.3.1",
-    "ng-mocks": "11.9.1",
-    "ngx-translate-testing": "5.1.0",
-    "typescript": "4.0.3"
-  },
-  "optionalDependencies": {
-    "cypress": "6.3.0"
   }
 }
