--- a/package.json
+++ b/package.json
@@ -35,10 +35,13 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "10.2.5"
+    "@angular/common": "10.2.5",
+    "@angular/core": "10.2.5",
+    "rxjs": "6.6.7"
   },
   "devDependencies": {
     "@angular/cli": "10.2.3",
-    "@typescript-eslint/eslint-plugin": "4.18.0"
+    "@typescript-eslint/eslint-plugin": "4.18.0",
+    "@typescript-eslint/parser": "4.18.0"
   }
 }
